appId: com.steffen.kolibi
---
- tapOn:
    id: "training.backfill.duration"
- eraseText
- inputText: "45"
- hideKeyboard
- waitForAnimationToEnd:
    timeout: 3000
- tapOn:
    id: "training.backfill.intensity.normal"
- waitForAnimationToEnd:
    timeout: 2000
- tapOn:
    id: "training.backfill.next"
- extendedWaitUntil:
    visible:
      id: "training.backfill.save"
    timeout: 15000
